# vecgraphdb

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md  patch_hnswlib.py  pyproject.toml
bindings/: py_vecgraphdb.cpp
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  PLAN.md
include/vecgraphdb/: manifest.hpp  thread_utils.hpp  types.hpp  vecgraphdb.hpp
python/: bindings.cpp
python/vecgraphdb/: __init__.py
src/: vecgraphdb.cpp
tests/: test_basic.cpp  test_comprehensive.cpp
