[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13.6"]
build-backend = "scikit_build_core.build"

[project]
name = "vecgraphdb"
version = "0.1.0"
description = "Vector + graph local database (HNSW + correlation edges)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "OpenClaw User"}]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/vecgraphdb"]

[tool.scikit-build.cmake.define]
VECGRAPHDB_BUILD_PYTHON = "ON"
